# aspiesolutions_core_old

./: .env  Cargo.toml  LICENSE  README.md
crates/auth0/: Cargo.toml
crates/auth0/scripts/: run-cargo-test.ps1
crates/auth0/src/: lib.rs  management.rs
scripts/: run-cargo-test.ps1
src/: db.rs  error.rs  lib.rs  rocket.rs  server.rs
src/auth0/: management.rs  mod.rs
src/entity/: bank_account.rs  bill.rs  currency.rs  mod.rs  query_engine.rs  session.rs  subscription.rs  subscription_entries.rs  subscription_entry_transactions.rs  transaction.rs  user.rs  user_identity.rs  user_passwords.rs
src/forms/: mod.rs  user.rs
src/server/: mod.rs
