[package]
name = "aspiesolutions_core"
description="core types used by many crates"
license="MIT"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde=["dep:serde"]
rocket=["dep:rocket"]
reqwest=["dep:reqwest"]
clone=[]
debug=[]

[dependencies]
reqwest = { version = "0.11.13", default-features=false, optional = true }
rocket = { version = "0.5.0-rc.2", default-features=false, features=["msgpack"], optional = true }
# aspiesolutions_error={version="0.1.0"}
aspiesolutions_entity={version="0.2"}
serde = { version = "1.0.150", optional = true, features = ["derive"] }
rmp-serde = "1.1.1"
thiserror = "1.0.38"
[patch.crates-io]
aspiesolutions_entity={path="../aspiesolutions_entity"}
