[package]
name = "aspiesolutions_core"
description="core types used by many crates"
license="MIT"
version = "0.2.22-pr.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde=["dep:serde", "uuid-serde"]
rmp-serde=["dep:rmp-serde"]
rocket=["dep:rocket"]
reqwest=["dep:reqwest"]
sea-orm=["dep:sea-orm"]
uuid-js=["uuid/js"]
uuid-serde=["uuid/serde"]
rocket-uuid=["rocket/uuid"]
clone=[]
debug=[]

[dependencies]
reqwest = { version = "0.11.13", default-features=false, optional = true }
rocket = { version = "0.5.0-rc.2", default-features=false, features=["msgpack"], optional = true }
serde = { version = "1.0.150", optional = true, features = ["derive"] }
rmp-serde = {version="1.1.1",optional=true}
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4"] }
sea-orm = { version = "0.10.6", optional = true }
chrono = "0.4.23"
rust_decimal = "1.27.0"
rust-argon2 = { version = "1.0.0", optional = true }
