[package]
name = "aspiesolutions_core"
description="core types used by many crates"
license="MIT"
version = "0.2.24-pr.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=["crates/*"]



[features]
serde=["dep:serde", "uuid-serde","chrono/serde"]
rmp-serde=["dep:rmp-serde"]
rocket=["dep:rocket"]
reqwest=["dep:reqwest", "reqwest/json", "reqwest/rustls-tls"]
sea-orm=["dep:sea-orm"]
uuid-js=["uuid/js"]
uuid-serde=["uuid/serde"]
rocket-uuid=["rocket/uuid"]
clone=[]
debug=[]
tokio-single-thread=["tokio", "tokio/rt"]
tokio-multi-thread=["tokio", "tokio/rt-multi-thread"]
figment=["dep:figment"]

[dependencies]
aspiesolutions_auth0_client={path="./crates/auth0"}
reqwest = { version = "0.11.13", default-features = false, optional = true }
rocket = { version = "0.5.0-rc.2", default-features=false, features=["msgpack","secrets"], optional = true }
serde = { version = "1.0.150", optional = true, features = ["derive"] }
rmp-serde = {version="1.1.1",optional=true}
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4"] }
sea-orm = { version = "0.10.6", optional = true }
chrono = "0.4.23"
rust_decimal = "1.27.0"
rust-argon2 = { version = "1.0.0", optional = true }
tokio = { version = "1.24.1", features = ["sync"], optional = true }
rand = "0.8.5"
jsonwebtoken = "8.2.0"
figment = {version="0.10.8",optional=true}
log = "0.4.17"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["sync","rt-multi-thread","macros"]}
figment = {version="0.10.8",features=["env"]}
dotenv = "0.15.0"
simple_logger = "4.0.0"