[package]
name="aspiesolutions_auth0_client"
version="0.1.0"
edition="2021"

[dependencies]
const_format = "0.2.30"
jsonwebtoken = "8.2.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["rustls-tls","json"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["sync"] }

[dev-dependencies]
dotenv = "0.15.0"
figment = { version = "0.10.8", features = ["env"] }
simple_logger = "4.0.0"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
